// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtworkPage tests should render artwork page component correctly after data is fetched from API 1`] = `
<div
  class="max-w-3xl mx-auto mt-4 bg-white dark:bg-gray-800 p-6 rounded-lg shadow"
  data-testid="main-categories-container"
>
  <div
    class="mb-4 border-b pb-2 min-w-0"
  >
    <p
      class="text-lg text-gray-500 dark:text-gray-300 break-words"
    >
      Kolekcja: 
      example collection
    </p>
  </div>
  <div
    data-testid="category-tree"
  >
    <ul>
      <li
        class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
        style="margin-left: 0px;"
      >
        <div
          class="flex justify-between items-center p-2 min-w-0"
        >
          <span
            class="break-words w-full min-w-0"
          >
            Tytuł
            : 
            testowy
          </span>
          <button
            aria-label="Tytuł-fold/expand-button"
            class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
          >
            <svg
              class="w-4 h-4"
            />
          </button>
        </div>
      </li>
      <li
        class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
        style="margin-left: 0px;"
      >
        <div
          class="flex justify-between items-center p-2 min-w-0"
        >
          <span
            class="break-words w-full min-w-0"
          >
            Artyści
            : 
            testowi
          </span>
        </div>
      </li>
      <li
        class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
        style="margin-left: 0px;"
      >
        <div
          class="flex justify-between items-center p-2 min-w-0"
        >
          <span
            class="break-words w-full min-w-0"
          >
            Rok
            : 
            966
          </span>
          <button
            aria-label="Rok-fold/expand-button"
            class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
          >
            <svg
              class="w-4 h-4"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="mb-4 mt-4"
  >
    <label
      class="block text-sm font-bold text-gray-700 dark:text-white my-2"
      for="dropzone-file"
    >
      Skojarzone pliki
    </label>
    <div
      class="flex flex-col items-start justify-start p-2 border-2 border-gray-200
                            border-solid rounded-lg cursor-default bg-gray-50
                            dark:bg-gray-800 dark:border-gray-600"
    >
      <div
        class="flex flex-row items-center justify-between w-full"
      >
        <div
          class="flex flex-row items-center justify-center gap-4"
        >
          <p
            class="text-sm font-normal text-gray-500 dark:text-gray-400"
          >
            Nie wgrano żadnego pliku. Aby dodać pliki do metadanych przejdź w tryb edycji.
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4 border-t pb-2 pt-2"
  >
    <p
      class="text-sm text-gray-500 dark:text-gray-300"
    >
      Data utworzenia rekordu: 
      5.11.2024, 21:14:22
    </p>
    <p
      class="text-sm text-gray-500 dark:text-gray-300"
    >
      Data ostatniej modyfikacji: 
      5.11.2024, 21:14:22
    </p>
  </div>
  <div
    class="mt-10 flex justify-end space-x-4"
  >
    <button
      class="text-sm text-blue-600 hover:underline rounded"
    >
      ← Powrót do kolekcji
    </button>
    <button
      class="flex items-center px-4 py-2 rounded bg-blue-500 text-white hover:bg-blue-600 transition-colors opacity-50 cursor-not-allowed"
      disabled=""
    >
      <svg
        class="w-5 h-5"
      />
      <span
        class="ml-2"
      >
        Edytuj
      </span>
    </button>
    <button
      class="flex items-center px-4 py-2 rounded border border-red-700 text-red-700 bg-red-50 hover:bg-red-100 transition-colors opacity-50 cursor-not-allowed"
      disabled=""
    >
      <svg
        class="w-5 h-5"
      />
      <span
        class="ml-2"
      >
        Usuń
      </span>
    </button>
  </div>
</div>
`;

exports[`ArtworkPage tests should render category tree correctly after subcategories are hidden by clicking fold buttons 1`] = `
<div
  data-testid="category-tree"
>
  <ul>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2 min-w-0"
      >
        <span
          class="break-words w-full min-w-0"
        >
          Tytuł
          : 
          testowy
        </span>
        <button
          aria-label="Tytuł-fold/expand-button"
          class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2 min-w-0"
      >
        <span
          class="break-words w-full min-w-0"
        >
          Artyści
          : 
          testowi
        </span>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2 min-w-0"
      >
        <span
          class="break-words w-full min-w-0"
        >
          Rok
          : 
          966
        </span>
        <button
          aria-label="Rok-fold/expand-button"
          class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`ArtworkPage tests should render category tree correctly after subcategories are shown by clicking expand button 1`] = `
<div
  data-testid="category-tree"
>
  <ul>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2 min-w-0"
      >
        <span
          class="break-words w-full min-w-0"
        >
          Tytuł
          : 
          testowy
        </span>
        <button
          aria-label="Tytuł-fold/expand-button"
          class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
      <div>
        <ul>
          <li
            class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
            style="margin-left: 16px;"
          >
            <div
              class="flex justify-between items-center p-2 min-w-0"
            >
              <span
                class="break-words w-full min-w-0"
              >
                Podtytuł
                : 
                testowy podtytuł
              </span>
            </div>
          </li>
        </ul>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2 min-w-0"
      >
        <span
          class="break-words w-full min-w-0"
        >
          Artyści
          : 
          testowi
        </span>
      </div>
    </li>
    <li
      class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
      style="margin-left: 0px;"
    >
      <div
        class="flex justify-between items-center p-2 min-w-0"
      >
        <span
          class="break-words w-full min-w-0"
        >
          Rok
          : 
          966
        </span>
        <button
          aria-label="Rok-fold/expand-button"
          class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
        >
          <svg
            class="w-4 h-4"
          />
        </button>
      </div>
      <div>
        <ul>
          <li
            class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
            style="margin-left: 16px;"
          >
            <div
              class="flex justify-between items-center p-2 min-w-0"
            >
              <span
                class="break-words w-full min-w-0"
              >
                Miesiąc
                : 
                Wrzesień
              </span>
              <button
                aria-label="Miesiąc-fold/expand-button"
                class="flex-shrink-0 text-blue-500 hover:text-blue-700 transition-colors p-1 ml-2"
              >
                <svg
                  class="w-4 h-4"
                />
              </button>
            </div>
            <div>
              <ul>
                <li
                  class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
                  style="margin-left: 16px;"
                >
                  <div
                    class="flex justify-between items-center p-2 min-w-0"
                  >
                    <span
                      class="break-words w-full min-w-0"
                    >
                      Dzień
                      : 
                      13
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </li>
          <li
            class="mb-2 bg-gray-50 dark:bg-gray-700 min-w-0 rounded"
            style="margin-left: 16px;"
          >
            <div
              class="flex justify-between items-center p-2 min-w-0"
            >
              <span
                class="break-words w-full min-w-0"
              >
                Pora roku
                : 
                lato
              </span>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;
